--- a/demo.Rmd
+++ b/demo.Rmd
@@ -7,6 +7,12 @@ output:
     toc_depth: 3
     toc_float: true
     number_sections: true
+
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+  encoding=encoding,
+  output_file=file.path(dirname(input_file), out_dir, 'index.html'))})    
 ---
 
 # TL;DR
